# data-engineering-bootcamp

./: LICENSE  README.md  pyproject.toml
.agents/skills/marimo/: SKILL.md
.agents/skills/marimo/references/: app.md  caching.md  cell.md  cli-args.md  control-flow.md  diagrams.md  html.md  inputs.md  layouts.md  markdown.md  media.md  outputs.md  plotting.md  query-params.md  sql.md  state.md  status.md  watch.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  epic.md  user-story.md
.github/workflows/: ci.yml  notebooks.yml
docs/: 01-curriculum-architecture.md  02-prd.md  03-premortem.md  04-backlog-structure.md
notebooks/module_00_environment/: 00_01_welcome.py  test_example.py
notebooks/module_08_databricks/: test_databricks.py
src/bootcamp/: __init__.py
src/bootcamp/datasets/: __init__.py
src/bootcamp/solutions/: __init__.py
src/bootcamp/utils/: __init__.py
tests/: test_notebooks.py  test_placeholder.py
