[project]
name = "data-engineering-bootcamp"
version = "0.1.0"
description = "Modern Python Data Science Bootcamp - Interactive Marimo notebooks covering Python fundamentals, local data stack, and distributed computing"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [
    { name = "Nathan Summers", email = "nsummers72@gmail.com" }
]
keywords = ["data-science", "bootcamp", "marimo", "polars", "duckdb", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "marimo>=0.10",
    "polars>=1.0",
    "duckdb>=1.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "pandera>=0.20",
    "scikit-learn>=1.5",
    "pytest>=8.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "ty>=0.0.14",
]

[project.urls]
Homepage = "https://github.com/ncolesummers/data-engineering-bootcamp"
Documentation = "https://github.com/ncolesummers/data-engineering-bootcamp/tree/main/docs"
Repository = "https://github.com/ncolesummers/data-engineering-bootcamp"
Issues = "https://github.com/ncolesummers/data-engineering-bootcamp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bootcamp"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "notebooks"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ty]
# ty type checker configuration
# Using defaults with strict checking
